--- a/src/main/resources/templates/fragments/allegati.html
+++ b/src/main/resources/templates/fragments/allegati.html
@@ -54,8 +54,8 @@
 	            </div>
 	            <div class="col-lg-1 col-md-2 col-sm-2 col-xs-3">
 					<div class="radio">
-						<label th:class="${!canValutaDomanda or !__${wrapper}__.mappa[__${idField}__].enabled} ? 'label-disabled'">
-							<input type="radio" class="flat" th:field="${__${wrapper}__.mappa[__${idField}__].esito}" th:value="true" th:disabled="${!canValutaDomanda or __${wrapper}__.mappa[__${idField}__].enabled}"  />
+						<label th:class="${!canValutaDomanda} or ${__${wrapper}__.mappa[__${idField}__]?.enabled == false} ? 'label-disabled'">
+							<input type="radio" class="flat" th:field="${__${wrapper}__.mappa[__${idField}__].esito}" th:value="true" th:disabled="${!canValutaDomanda} or ${__${wrapper}__.mappa[__${idField}__]?.enabled == false}"  />
 							<span th:text="#{label.sì}">Sì</span>
 						</label>
 					</div>
